@@ -57,10 +57,15 @@ void _mosquitto_message_cleanup_all(struct mosquitto *mosq)
 
 	assert(mosq);
 
-	while(mosq->messages){
-		tmp = mosq->messages->next;
-		_mosquitto_message_cleanup(&mosq->messages);
-		mosq->messages = tmp;
+	while(mosq->in_messages){
+		tmp = mosq->in_messages->next;
+		_mosquitto_message_cleanup(&mosq->in_messages);
+		mosq->in_messages = tmp;
+	}
+	while(mosq->out_messages){
+		tmp = mosq->out_messages->next;
+		_mosquitto_message_cleanup(&mosq->out_messages);
+		mosq->out_messages = tmp;
 	}
 }
 
@@ -114,23 +119,34 @@ void mosquitto_message_free(struct mosquitto_message **message)
 	_mosquitto_free(msg);
 }
 
-void _mosquitto_message_queue(struct mosquitto *mosq, struct mosquitto_message_all *message, bool doinc)
+void _mosquitto_message_queue(struct mosquitto *mosq, struct mosquitto_message_all *message, enum mosquitto_msg_direction dir)
 {
-	/* mosq->message_mutex should be locked before entering this function */
+	/* mosq->*_message_mutex should be locked before entering this function */
 	assert(mosq);
 	assert(message);
 
-	mosq->queue_len++;
-	if(doinc == true && message->msg.qos > 0 && (mosq->max_inflight_messages == 0 || mosq->inflight_messages < mosq->max_inflight_messages)){
-		mosq->inflight_messages++;
-	}
-	message->next = NULL;
-	if(mosq->messages_last){
-		mosq->messages_last->next = message;
+	if(dir == mosq_md_out){
+		mosq->out_queue_len++;
+		message->next = NULL;
+		if(mosq->out_messages_last){
+			mosq->out_messages_last->next = message;
+		}else{
+			mosq->out_messages = message;
+		}
+		mosq->out_messages_last = message;
 	}else{
-		mosq->messages = message;
+		mosq->in_queue_len++;
+		if(message->msg.qos > 0 && (mosq->max_inflight_messages == 0 || mosq->inflight_messages < mosq->max_inflight_messages)){
+			mosq->inflight_messages++;
+		}
+		message->next = NULL;
+		if(mosq->in_messages_last){
+			mosq->in_messages_last->next = message;
+		}else{
+			mosq->in_messages = message;
+		}
+		mosq->in_messages_last = message;
 	}
-	mosq->messages_last = message;
 }
 
 void _mosquitto_messages_reconnect_reset(struct mosquitto *mosq)
@@ -139,47 +155,58 @@ void _mosquitto_messages_reconnect_reset(struct mosquitto *mosq)
 	struct mosquitto_message_all *prev = NULL;
 	assert(mosq);
 
-	pthread_mutex_lock(&mosq->message_mutex);
-	mosq->queue_len = 0;
-	mosq->inflight_messages = 0;
-	message = mosq->messages;
+	pthread_mutex_lock(&mosq->in_message_mutex);
+	message = mosq->in_messages;
+	mosq->in_queue_len = 0;
 	while(message){
+		mosq->in_queue_len++;
 		message->timestamp = 0;
-		if(message->direction == mosq_md_out){
-			mosq->queue_len++;
-			if(message->msg.qos > 0){
-				mosq->inflight_messages++;
-			}
-			if(mosq->max_inflight_messages == 0 || mosq->inflight_messages < mosq->max_inflight_messages){
-				if(message->msg.qos == 1){
-					message->state = mosq_ms_wait_for_puback;
-				}else if(message->msg.qos == 2){
-					/* Should be able to preserve state. */
-				}
+		if(message->msg.qos != 2){
+			if(prev){
+				prev->next = message->next;
+				_mosquitto_message_cleanup(&message);
+				message = prev;
 			}else{
-				message->state = mosq_ms_invalid;
+				mosq->in_messages = message->next;
+				_mosquitto_message_cleanup(&message);
+				message = mosq->in_messages;
 			}
 		}else{
-			if(message->msg.qos != 2){
-				if(prev){
-					prev->next = message->next;
-					_mosquitto_message_cleanup(&message);
-					message = prev;
-				}else{
-					mosq->messages = message->next;
-					_mosquitto_message_cleanup(&message);
-					message = mosq->messages;
-				}
-			}else{
-				/* Message state can be preserved here because it should match
-				 * whatever the client has got. */
-			}
+			/* Message state can be preserved here because it should match
+			* whatever the client has got. */
 		}
 		prev = message;
 		message = message->next;
 	}
-	mosq->messages_last = prev;
-	pthread_mutex_unlock(&mosq->message_mutex);
+	mosq->in_messages_last = prev;
+	pthread_mutex_unlock(&mosq->in_message_mutex);
+
+
+	pthread_mutex_lock(&mosq->out_message_mutex);
+	mosq->inflight_messages = 0;
+	message = mosq->out_messages;
+	mosq->out_queue_len = 0;
+	while(message){
+		mosq->out_queue_len++;
+		message->timestamp = 0;
+
+		if(message->msg.qos > 0){
+			mosq->inflight_messages++;
+		}
+		if(mosq->max_inflight_messages == 0 || mosq->inflight_messages < mosq->max_inflight_messages){
+			if(message->msg.qos == 1){
+				message->state = mosq_ms_wait_for_puback;
+			}else if(message->msg.qos == 2){
+				/* Should be able to preserve state. */
+			}
+		}else{
+			message->state = mosq_ms_invalid;
+		}
+		prev = message;
+		message = message->next;
+	}
+	mosq->out_messages_last = prev;
+	pthread_mutex_unlock(&mosq->out_message_mutex);
 }
 
 int _mosquitto_message_remove(struct mosquitto *mosq, uint16_t mid, enum mosquitto_msg_direction dir, struct mosquitto_message_all **message)
@@ -190,97 +217,137 @@ int _mosquitto_message_remove(struct mosquitto *mosq, uint16_t mid, enum mosquit
 	assert(mosq);
 	assert(message);
 
-	pthread_mutex_lock(&mosq->message_mutex);
-	cur = mosq->messages;
-	while(cur){
-		if(cur->msg.mid == mid && cur->direction == dir){
-			if(prev){
-				prev->next = cur->next;
-			}else{
-				mosq->messages = cur->next;
-			}
-			*message = cur;
-			mosq->queue_len--;
-			if(cur->next == NULL){
-				mosq->messages_last = prev;
-			}else if(!mosq->messages){
-				mosq->messages_last = NULL;
-			}
-			if((cur->msg.qos == 2 && dir == mosq_md_in) || (cur->msg.qos > 0 && dir == mosq_md_out)){
-				mosq->inflight_messages--;
-			}
-			found = true;
-			break;
-		}
-		prev = cur;
-		cur = cur->next;
-	}
-
-	if(found){
-		cur = mosq->messages;
+	if(dir == mosq_md_out){
+		pthread_mutex_lock(&mosq->out_message_mutex);
+		cur = mosq->out_messages;
 		while(cur){
-			if(mosq->max_inflight_messages == 0 || mosq->inflight_messages < mosq->max_inflight_messages){
-				if(cur->msg.qos > 0 && cur->state == mosq_ms_invalid && cur->direction == mosq_md_out){
-					mosq->inflight_messages++;
-					if(cur->msg.qos == 1){
-						cur->state = mosq_ms_wait_for_puback;
-					}else if(cur->msg.qos == 2){
-						cur->state = mosq_ms_wait_for_pubrec;
-					}
-					rc = _mosquitto_send_publish(mosq, cur->msg.mid, cur->msg.topic, cur->msg.payloadlen, cur->msg.payload, cur->msg.qos, cur->msg.retain, cur->dup);
-					if(rc){
-						pthread_mutex_unlock(&mosq->message_mutex);
-						return rc;
-					}
+			if(cur->msg.mid == mid){
+				if(prev){
+					prev->next = cur->next;
+				}else{
+					mosq->out_messages = cur->next;
 				}
-			}else{
-				pthread_mutex_unlock(&mosq->message_mutex);
-				return MOSQ_ERR_SUCCESS;
+				*message = cur;
+				mosq->out_queue_len--;
+				if(cur->next == NULL){
+					mosq->out_messages_last = prev;
+				}else if(!mosq->out_messages){
+					mosq->out_messages_last = NULL;
+				}
+				if(cur->msg.qos > 0){
+					mosq->inflight_messages--;
+				}
+				found = true;
+				break;
 			}
+			prev = cur;
 			cur = cur->next;
 		}
-		pthread_mutex_unlock(&mosq->message_mutex);
-		return MOSQ_ERR_SUCCESS;
+
+		if(found){
+			cur = mosq->out_messages;
+			while(cur){
+				if(mosq->max_inflight_messages == 0 || mosq->inflight_messages < mosq->max_inflight_messages){
+					if(cur->msg.qos > 0 && cur->state == mosq_ms_invalid){
+						mosq->inflight_messages++;
+						if(cur->msg.qos == 1){
+							cur->state = mosq_ms_wait_for_puback;
+						}else if(cur->msg.qos == 2){
+							cur->state = mosq_ms_wait_for_pubrec;
+						}
+						rc = _mosquitto_send_publish(mosq, cur->msg.mid, cur->msg.topic, cur->msg.payloadlen, cur->msg.payload, cur->msg.qos, cur->msg.retain, cur->dup);
+						if(rc){
+							pthread_mutex_unlock(&mosq->out_message_mutex);
+							return rc;
+						}
+					}
+				}else{
+					pthread_mutex_unlock(&mosq->out_message_mutex);
+					return MOSQ_ERR_SUCCESS;
+				}
+				cur = cur->next;
+			}
+			pthread_mutex_unlock(&mosq->out_message_mutex);
+			return MOSQ_ERR_SUCCESS;
+		}else{
+			pthread_mutex_unlock(&mosq->out_message_mutex);
+			return MOSQ_ERR_NOT_FOUND;
+		}
 	}else{
-		pthread_mutex_unlock(&mosq->message_mutex);
-		return MOSQ_ERR_NOT_FOUND;
+		pthread_mutex_lock(&mosq->in_message_mutex);
+		cur = mosq->in_messages;
+		while(cur){
+			if(cur->msg.mid == mid){
+				if(prev){
+					prev->next = cur->next;
+				}else{
+					mosq->in_messages = cur->next;
+				}
+				*message = cur;
+				mosq->in_queue_len--;
+				if(cur->next == NULL){
+					mosq->in_messages_last = prev;
+				}else if(!mosq->in_messages){
+					mosq->in_messages_last = NULL;
+				}
+				if(cur->msg.qos == 2){
+					mosq->inflight_messages--;
+				}
+				found = true;
+				break;
+			}
+			prev = cur;
+			cur = cur->next;
+		}
+
+		pthread_mutex_unlock(&mosq->in_message_mutex);
+		if(found){
+			return MOSQ_ERR_SUCCESS;
+		}else{
+			return MOSQ_ERR_NOT_FOUND;
+		}
 	}
 }
 
-void _mosquitto_message_retry_check(struct mosquitto *mosq)
+void _mosquitto_message_retry_check_actual(struct mosquitto *mosq, struct mosquitto_message_all *messages, pthread_mutex_t mutex)
 {
-	struct mosquitto_message_all *message;
 	time_t now = mosquitto_time();
 	assert(mosq);
 
-	pthread_mutex_lock(&mosq->message_mutex);
-	message = mosq->messages;
-	while(message){
-		if(message->timestamp + mosq->message_retry < now){
-			switch(message->state){
+	pthread_mutex_lock(&mutex);
+
+	while(messages){
+		if(messages->timestamp + mosq->message_retry < now){
+			switch(messages->state){
 				case mosq_ms_wait_for_puback:
 				case mosq_ms_wait_for_pubrec:
-					message->timestamp = now;
-					message->dup = true;
-					_mosquitto_send_publish(mosq, message->msg.mid, message->msg.topic, message->msg.payloadlen, message->msg.payload, message->msg.qos, message->msg.retain, message->dup);
+					messages->timestamp = now;
+					messages->dup = true;
+					_mosquitto_send_publish(mosq, messages->msg.mid, messages->msg.topic, messages->msg.payloadlen, messages->msg.payload, messages->msg.qos, messages->msg.retain, messages->dup);
 					break;
 				case mosq_ms_wait_for_pubrel:
-					message->timestamp = now;
-					message->dup = true;
-					_mosquitto_send_pubrec(mosq, message->msg.mid);
+					messages->timestamp = now;
+					messages->dup = true;
+					_mosquitto_send_pubrec(mosq, messages->msg.mid);
 					break;
 				case mosq_ms_wait_for_pubcomp:
-					message->timestamp = now;
-					message->dup = true;
-					_mosquitto_send_pubrel(mosq, message->msg.mid, true);
+					messages->timestamp = now;
+					messages->dup = true;
+					_mosquitto_send_pubrel(mosq, messages->msg.mid, true);
 					break;
 				default:
 					break;
 			}
 		}
-		message = message->next;
+		messages = messages->next;
 	}
-	pthread_mutex_unlock(&mosq->message_mutex);
+	pthread_mutex_unlock(&mutex);
+}
+
+void _mosquitto_message_retry_check(struct mosquitto *mosq)
+{
+	_mosquitto_message_retry_check_actual(mosq, mosq->out_messages, mosq->out_message_mutex);
+	_mosquitto_message_retry_check_actual(mosq, mosq->in_messages, mosq->in_message_mutex);
 }
 
 void mosquitto_message_retry_set(struct mosquitto *mosq, unsigned int message_retry)
@@ -289,23 +356,23 @@ void mosquitto_message_retry_set(struct mosquitto *mosq, unsigned int message_re
 	if(mosq) mosq->message_retry = message_retry;
 }
 
-int _mosquitto_message_update(struct mosquitto *mosq, uint16_t mid, enum mosquitto_msg_direction dir, enum mosquitto_msg_state state)
+int _mosquitto_message_out_update(struct mosquitto *mosq, uint16_t mid, enum mosquitto_msg_state state)
 {
 	struct mosquitto_message_all *message;
 	assert(mosq);
 
-	pthread_mutex_lock(&mosq->message_mutex);
-	message = mosq->messages;
+	pthread_mutex_lock(&mosq->out_message_mutex);
+	message = mosq->out_messages;
 	while(message){
-		if(message->msg.mid == mid && message->direction == dir){
+		if(message->msg.mid == mid){
 			message->state = state;
 			message->timestamp = mosquitto_time();
-			pthread_mutex_unlock(&mosq->message_mutex);
+			pthread_mutex_unlock(&mosq->out_message_mutex);
 			return MOSQ_ERR_SUCCESS;
 		}
 		message = message->next;
 	}
-	pthread_mutex_unlock(&mosq->message_mutex);
+	pthread_mutex_unlock(&mosq->out_message_mutex);
 	return MOSQ_ERR_NOT_FOUND;
 }
 
